<resources>
    <string name="app_name">Qui Chante ?</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="artiste_1">1</string>
    <string name="artiste_5">5</string>
    <string name="artiste_4">4</string>
    <string name="artiste_3">3</string>
    <string name="artiste_2">2</string>
    <string name="next">Suivant</string>
    <string name="remote">remote</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="resume">Jouer</string>
    <string name="pause">Pause</string>
</resources>
