<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kagura.project.com.a102.GameActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/layout_tv"
        android:id="@+id/imageLayoutTv"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ff6600"
        android:visibility="invisible"
        android:onClick="nextQuestion"
        android:id="@+id/buttonNext" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="response"
        android:id="@+id/buttonAnswer3"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:layout_marginLeft="193dp"
        android:layout_marginStart="193dp"
        android:layout_marginBottom="13dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="response"
        android:id="@+id/buttonAnswer4"
        android:layout_alignBaseline="@+id/buttonAnswer3"
        android:layout_alignBottom="@+id/buttonAnswer3"
        android:layout_toRightOf="@+id/buttonAnswer3"
        android:layout_toEndOf="@+id/buttonAnswer3"
        android:layout_marginLeft="100dp"
        android:layout_marginStart="100dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="response"
        android:id="@+id/buttonAnswer2"
        android:layout_above="@+id/buttonAnswer4"
        android:layout_alignLeft="@+id/buttonAnswer4"
        android:layout_alignStart="@+id/buttonAnswer4"
        android:layout_marginBottom="13dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonAnswer1"
        android:onClick="response"
        android:layout_alignBaseline="@+id/buttonAnswer2"
        android:layout_alignBottom="@+id/buttonAnswer2"
        android:layout_alignLeft="@+id/buttonAnswer3"
        android:layout_alignStart="@+id/buttonAnswer3" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/darty"
        android:id="@+id/imageRemote"
        android:contentDescription="@string/remote"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageChanson2"
        android:scaleType="fitCenter"
        android:contentDescription="musique 1"
        android:src="@drawable/claude_francois_1"
        android:layout_alignTop="@+id/buttonState"
        android:layout_toLeftOf="@+id/imageChanson3"
        android:layout_toStartOf="@+id/imageChanson3"
        android:layout_marginRight="39dp"
        android:layout_marginEnd="39dp" />

    <TextView
        android:text="Je suis:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="36sp"

        android:layout_marginLeft="305dp"
        android:layout_marginStart="305dp"
        android:layout_marginBottom="30dp"
        android:layout_alignBottom="@+id/buttonAnswer3"
        android:layout_toRightOf="@+id/imageRemote"
        android:layout_toEndOf="@+id/imageRemote" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageChanson4"
        android:scaleType="fitCenter"
        android:src="@drawable/claude_francois_1"
        android:contentDescription="musique 1"
        android:layout_alignTop="@+id/imageChanson3"
        android:layout_toRightOf="@+id/imageChanson3"
        android:layout_toEndOf="@+id/imageChanson3" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageChanson3"
        android:scaleType="fitCenter"
        android:src="@drawable/claude_francois_1"
        android:contentDescription="musique 1"
        android:layout_marginRight="25dp"
        android:layout_marginEnd="25dp"
        android:layout_alignTop="@+id/imageChanson2"
        android:layout_toLeftOf="@+id/buttonAnswer2"
        android:layout_toStartOf="@+id/buttonAnswer2" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageChanson1"
        android:src="@drawable/claude_francois_1"
        android:scaleType="fitCenter"
        android:contentDescription="musique 1"
        android:layout_alignTop="@+id/imageChanson2"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="switchSong"
        android:visibility="visible"
        android:id="@+id/buttonChanson1"
        android:layout_above="@+id/buttonAnswer1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="switchSong"
        android:visibility="visible"
        android:id="@+id/buttonChanson2"
        android:layout_alignBaseline="@+id/buttonChanson1"
        android:layout_alignBottom="@+id/buttonChanson1"
        android:layout_alignRight="@+id/imageChanson2"
        android:layout_alignEnd="@+id/imageChanson2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="switchSong"
        android:visibility="visible"
        android:id="@+id/buttonChanson3"
        android:layout_alignBaseline="@+id/buttonChanson2"
        android:layout_alignBottom="@+id/buttonChanson2"
        android:layout_alignLeft="@+id/imageChanson3"
        android:layout_alignStart="@+id/imageChanson3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="switchSong"
        android:visibility="visible"
        android:id="@+id/buttonChanson4"
        android:layout_alignBaseline="@+id/buttonChanson3"
        android:layout_alignBottom="@+id/buttonChanson3"
        android:layout_toRightOf="@+id/imageChanson3"
        android:layout_toEndOf="@+id/imageChanson3" />

    <Button
        android:text="@string/artiste_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonArtist1"
        android:onClick="switchArtist"
        android:layout_alignBottom="@+id/imageChanson1"
        android:layout_alignRight="@+id/imageRemote"
        android:layout_alignEnd="@+id/imageRemote" />

    <Button
        android:text="@string/artiste_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:onClick="switchArtist"
        android:id="@+id/buttonArtist2"
        android:layout_below="@+id/buttonArtist1"
        android:layout_alignRight="@+id/imageRemote"
        android:layout_alignEnd="@+id/imageRemote" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/ic_media_play"
        android:onClick="StartMusic"
        android:id="@+id/buttonState"
        android:visibility="visible"
        android:layout_marginTop="13dp"
        android:layout_alignTop="@+id/imageRemote"
        android:layout_alignRight="@+id/imageRemote"
        android:layout_alignEnd="@+id/imageRemote" />

    <Button
        android:text="@string/artiste_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="switchArtist"
        android:id="@+id/buttonArtist3"
        android:layout_below="@+id/buttonArtist2"
        android:layout_alignRight="@+id/imageRemote"
        android:layout_alignEnd="@+id/imageRemote" />

    <Button
        android:text="@string/artiste_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="switchArtist"
        android:id="@+id/buttonArtist4"
        android:layout_below="@+id/buttonArtist3"
        android:layout_alignRight="@+id/imageRemote"
        android:layout_alignEnd="@+id/imageRemote" />

    <Button
        android:text="@string/artiste_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="switchArtist"
        android:id="@+id/buttonArtist5"
        android:layout_alignBaseline="@+id/buttonAnswer3"
        android:layout_alignBottom="@+id/buttonAnswer3"
        android:layout_alignLeft="@+id/buttonArtist4"
        android:layout_alignStart="@+id/buttonArtist4" />

</RelativeLayout>
